<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_id">1505094703080117</string>
    <string name="app_name">SafeBus</string>
    <string name="hello_world">Hello world!</string>
    <string name="dialogo_btn_aceptar">Aceptar</string>
    <string name="paginas_instrucciones_titulo">Bienvenido</string>
    <string name="paginas_instrucciones_texto_pag_1">Recuerda, si en algún momento te sientes inseguro/insegura o agredido/agredida, puedes apretar el botón de REPORTA y se mandará una notificación al centro de mando y a un contacto que elegirás a continuación</string>
    <string name="instrucciones_contacto">Si en algún momento te sientes inseguro o agredido, puedes apretar el botón de REPORTA y se mandará una notificación al centro de mando y al contacto que elijas en este momento.</string>
    <string name="mensaje_emergencia">Márcame a mi celular en cuanto puedas, por favor.</string>
    <string name="mensaje_emergencia_hint">Agrega un mensaje de emergencia</string>
    <string name="eliminar_contacto">Eliminar contacto</string>

    <!-- panico -->
    <string name="ingresa_placa">Ingresa la placa del autobús</string>
    <string name="texto_placa">Placa</string>
    <string name="ruta_registro_vacio">Debes poner la placa</string>

    <!-- Mapa -->
    <string name="mapa_espera">Un momento, te estamos localizando</string>
    <string name="mapa_mi_ubicacion">Mi ubicación</string>
    
    
    
    <!-- pag cas -->
     <string name="paginas_instrucciones_titulo_cas">¿Contactar a la UCS?</string>
    <string name="paginas_instrucciones_texto_pag_cas">La UCS es la Unidad de Contacto del Secretario de Seguridad Pública. \n Ellos podrán dar atención y hacer una denuncia formal, en caso de que aplique.</string>

        <!-- pag mando -->
     <string name="paginas_instrucciones_titulo_mando">¿Contactar al Centro De Mando?</string>
    <string name="paginas_instrucciones_texto_pag_mando">El Centro de Mando controla a todos los autobuses dentro de este programa \n Ellos pueden contactar a la policia, encender las camaras y contactar al chofer para dar instrucciones de que hacer.</string>
    
    
    

    <!-- Pagina 2 -->
    <string name="paginas_instrucciones_texto_pag_2_1">Da click en el botón “+” para AGREGAR un contacto que reciba tus notificaciones.</string>
    <string name="paginas_instrucciones_texto_pag_2_2">Si no quieres agregarlo ahora, podras hacerlo en cualquier momento despues.</string>
    <string name="paginas_instrucciones_texto_pag_2_1_listo">Da click en el botón “+” para EDITAR tu contacto de notificaciones.</string>
    <string name="paginas_instrucciones_texto_pag_2_2_listo">Para finalizar, da click en Entiendo.</string>
    <string name="paginas_instrucciones_texto_pag_2_3">Recuerda, siempre puedes ir a las configuraciones y agregar o editar tu contacto. </string>
    <string name="problemas_titulo">¿Quién está teniendo problemas?</string>
    <string name="notificar_chofer_familia">Gracias por reportar, hemos notificado al centro de mando y a tu contacto de seguridad.</string>
    <string name="notificar_chofer">Gracias por reportar, hemos notificado al centro de mando.</string>
    <string name="notificar_acceso_wifi">Para acceder al WiFi del autobus, da like al grupo de SafeBus y te enviaremos la contraseña</string>
    <string name="gracias_por_compartir">En ese grupo podrás compartir mejor tu perspectiva sobre esta campaña y el servicio que se está dando en la línea de autobús.</string>
    <string name="gracias_por_compartir_banda">Para obtener la contraseña la próxima vez que hagas un viaje, te pediremos que califiques tu viaje una vez que bajes del autobús.</string>
    <string name="gracias_por_realimentacion">Gracias por dar retroalimentación en tu viaje anterior. En un momento enviaremos la contraseña del WiFi. </string>
    <string name="safebus_menu_encuentra">Encuentra</string>
    <string name="safebus_menu_reporta">Reporta</string>
    <string name="safebus_menu_conecta">Conecta</string>

    <!-- Pagina 3 -->
    <string name="paginas_instrucciones_titulo_3">Contra la violencia</string>
    <string name="paginas_instrucciones_texto_pag_3">Recuerda que cuentas con el apoyo de InMujer en caso de ver o ser víctima de algún delito sexual y/o cualquier tipo de VIOLENCIA DE GENERO en el transporte público\n ¡por favor reporta cualquier abuso!\n</string>

    <!-- Registro -->
    <string name="main_agregar_contacto">Agregar Contacto</string>
    <string name="main_editar_contacto">Editar Contacto</string>
    <string name="main_agregar_cas">Contactar CAS</string>
    <string name="main_eliminar_cas">No contactar CAS</string>
    <string name="main_menu_acerca_de">Acerca de</string>
    <string name="main_menu_menu">Menu</string>
    <string name="registro_titulo">Contacto de emergencia</string>
    <string name="registro_btn_guardar">Guardar</string>
    <string name="title_activity_contacto">ContactoActivity</string>
    <string name="registro_et_telefono">Teléfono</string>
    <string name="registro_et_correo">Correo</string>
    <string name="registro_selecciona_uno">Selecciona uno</string>
    <string name="registro_telefono_vacio">Debes llenar el teléfono correctamente</string>
    <string name="registro_correo_vacio">El mensaje NO puede estar vacio</string>
    <string name="registro_telefono_largo">El teléfono debe ser de 10 digitos</string>
    <string name="registro_telefono_incorrecto">El teléfono debe ser sólo de números</string>
    <string name="registro_correo_incorrecto">El correo está mal escrito</string>
    <string name="title_activity_reporte">ReporteActivity</string>
    <string name="title_activity_enviar_alarma">EnviarAlarmaActivity</string>
    <string name="alarma_enviando">Enviando alarma.</string>
    <string name="back_salir">Presiona una vez más para salir</string>

    <!-- conectar -->
    <string name="Pagina_liked">En un momento te enviaremos la contraseña</string>

    <!-- Esperar -->
    <string name="espere">espera, por favor ......</string>

    <!-- Califica bus -->
    <string name="califica_bus_tv_titulo_calif">¿Qué te pareció el viaje en el bus?</string>
    <string name="califica_bus_btn_aceptar">Aceptar</string>
    <string name="califica_bus_et_comentario">Comentario</string>
    <string name="Califica_taxi_0">Muy deficiente</string>
    <string name="Califica_taxi_05">Deficiente</string>
    <string name="Califica_taxi_10">Muy mal</string>
    <string name="Califica_taxi_15">Mal</string>
    <string name="Califica_taxi_20">Servicio regular malo</string>
    <string name="Califica_taxi_25">Servicio regular</string>
    <string name="Califica_taxi_30">Servicio regular bueno</string>
    <string name="Califica_taxi_35">Buen servicio</string>
    <string name="Califica_taxi_40">Muy buen servicio</string>
    <string name="Califica_taxi_45">Excelente servicio</string>
    <string name="Califica_taxi_50">Servicio insuperable</string>
    <string name="tel_inmujeres">55122792</string>
    <string name="tel_casssp">52089898</string>
    <string name="tel_policia">55335533</string>

</resources>
