<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu"
        android:icon="@drawable/boton_menu_selector"
        android:title="@string/main_menu_menu"
        yourapp:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menuadd"
                android:icon="@drawable/boton_mas_selector"
                android:title="@string/main_agregar_contacto">
            </item>
            <item
                android:id="@+id/menuabouth"
                android:icon="@drawable/ic_launcher_logo"
                android:title="@string/main_menu_acerca_de">
            </item>
        </menu>
    </item>

</menu>