<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".RegistroContactosEmergenciaActivity" >

    <TextView
        android:id="@+id/mitaxiregistermanually_tv_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/registro_titulo"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/mitaxiregistermanually_sv_container_infouser_emer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/linearLayout3"
        android:layout_below="@+id/mitaxiregistermanually_btn_guardar"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="vertical" >

        <LinearLayout
            android:id="@+id/mitaxiregistermanually_ll_contactos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:paddingTop="3dp" >

            <LinearLayout
                android:id="@+id/mitaxiregistermanually_ll_container_infouser_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".8"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/registro_et_telefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight=".9"
                        android:drawableLeft="@drawable/ic_launcher_cel"
                        android:ems="10"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="@string/registro_et_telefono"
                        android:inputType="phone"
                        android:textColorHint="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/registro_et_correo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:layout_marginTop="5dp"
                        android:drawableLeft="@drawable/ic_launcher_mail"
                        android:ems="10"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="@string/registro_et_correo"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@android:color/darker_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".2"
                    android:orientation="vertical" >

                    <ImageButton
                        android:id="@+id/registro_btn_contacto"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="3dp"
                        android:background="@color/android_trans"
                        android:src="@drawable/ic_launcher_perfil" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

   

    <Button
        android:id="@+id/mitaxiregistermanually_btn_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
android:layout_alignLeft="@+id/mitaxiregistermanually_sv_container_infouser_emer"
        android:layout_below="@+id/mitaxiregistermanually_tv_label"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/registro_btn_guardar" />

</RelativeLayout>