<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/marco_fondo" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_launcher_logo"
            android:gravity="center"
            android:paddingLeft="0dp"
            android:paddingRight="3dp"
            android:text="@string/ingresa_placa" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/color_safebus_rojo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/dialogo_placa_et_placa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/selector_edittext"
                        android:drawableLeft="@drawable/ic_launcher_placa"
                        android:ems="10"
						android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                        android:hint="@string/texto_placa"
                        android:inputType="text"
                        android:maxLength="10"
                        android:textColorHint="@android:color/darker_gray" />

                    <ImageView
                        android:id="@+id/enviar_alarma_iv_reporte_chofer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/saefubus_alarmabussmall"
                        android:visibility="gone" />
                </LinearLayout>

                <Button
                    android:id="@+id/dialogo_placa_btn_aceptar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:background="@drawable/selector_btn_square"
                    android:layout_gravity="right"
                    android:text="@string/dialogo_btn_aceptar"
                    android:textColor="@drawable/selector_tv_color_btn" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>